resources/scss/_condition-tabs.scss
@use "utils/variables" as variables;
@import "utils/utils";

@import "utils/media-queries";
.condition-tabs {
    @include centerSection;
    width: 79%;
    // margin-left: 13.5%;
    // display: flex;
    justify-content: space-between;
    &__wrapper {
        min-height: 52px;
        min-width: 241px;
        // width: max-content !important;
        border-radius: 10px;
        padding: 16px 40px;
        border:1px solid variables.$starhospitals-brand-secondary;
        display: flex !important;
        align-items: center !important;
        justify-content: center !important;
        font-weight: 700;
        font-family: 'Plus Jakarta Sans Bold';
        color: variables.$starhospitals-brand-secondary;
        margin:0px 0.5em;
        @include media('sm-mob')
        {
            min-width: initial;
            font-size: 12px;
            padding: 10px 15px;
        }
        @include media('md-mob')
        {
            min-width: initial;
            font-size: 12px;
            padding: 10px 15px;
        }
        @include media('lg-mob')
        {
            min-width: initial;
            font-size: 12px;
            padding: 10px 15px;
        }
        @include media('x-sm-tab')
        {
            min-width: initial;
            font-size: 12px;
            padding: 10px 15px;
        }
        @include media('sm-tab')
        {
            min-width: initial;
            
        }
        @include media('md-tab')
        {
            min-width: initial;
            
        }
        @include media('x-sm-desktop')
        {
            
            font-size: 14px;
            
        }
        &--active{
        background-color: variables.$starhospitals-brand-secondary;
            color: #ffff;
        }
    }
}

